RM-8478 Fix missing scrollbar style on textarea and select element in Firefox

--- a/Remotion/Web/Core/Res/Themes/NovaViso/HTML/Common.css
+++ b/Remotion/Web/Core/Res/Themes/NovaViso/HTML/Common.css
@@ -390,6 +390,23 @@ a.remotion-themed:focus,
   outline: none;
 }
 
+select.remotion-themed,
+textarea.remotion-themed,
+.remotion-themed select,
+.remotion-themed textarea
+{
+  scrollbar-width: var(--remotion-themed-scrollbar-style);
+  scrollbar-color: var(--remotion-themed-scrollbar-color-thumb) var(--remotion-themed-background-color-control);
+}
+
+select.remotion-themed:disabled,
+textarea.remotion-themed:disabled,
+.remotion-themed select:disabled,
+.remotion-themed textarea:disabled
+{
+  scrollbar-color: var(--color-disabled-border) var(--remotion-themed-background-color-disabled);
+}
+
 select.remotion-themed::-webkit-scrollbar,
 textarea.remotion-themed::-webkit-scrollbar,
 .remotion-themed select::-webkit-scrollbar,
